add lightweight test of hyperdeck record controls

--- a/Integrated Presenter/Connection.xaml
+++ b/Integrated Presenter/Connection.xaml
@@ -5,12 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Integrated_Presenter"
         mc:Ignorable="d"
-        Title="Connect to Switcher" Height="120" Width="380">
+        Title="Connect" Height="120" Width="380">
     <Grid>
         <StackPanel VerticalAlignment="Center">
             <StackPanel Orientation="Horizontal">
-                <TextBlock Margin="10,10,10,10">Switcher IP Address:</TextBlock>
-                <TextBox Name="tbIP" Width="200" Margin="10,10,10,10">192.168.2.120</TextBox>
+                <TextBlock Name="lbIP" Margin="10,10,10,10">IP Address:</TextBlock>
+                <TextBox Name="tbIP" Width="200" Margin="10,10,10,10"></TextBox>
             </StackPanel>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                 <Button Click="Cancel" Margin="10,10,10,10" Width="100" Height="30">Cancel</Button>
