--- a/Integrated Presenter/App.xaml
+++ b/Integrated Presenter/App.xaml
@@ -58,6 +58,19 @@
             <Setter Property="CornerRadius" Value="4,4,4,4"></Setter>
         </Style>
 
+
+        <Style x:Key="darkTextbox" TargetType="{x:Type TextBox}">
+            <Setter Property="Background" Value="#1f1f1f"></Setter>
+            <Setter Property="Cursor" Value="IBeam"></Setter>
+            <Setter Property="Foreground" Value="Orange"></Setter>
+            <Setter Property="BorderBrush" Value="DarkGray"></Setter>
+            <Setter Property="BorderThickness" Value="0"></Setter>
+            <Setter Property="CaretBrush" Value="White"></Setter>
+            <Setter Property="HorizontalContentAlignment" Value="Center"></Setter>
+            <Setter Property="VerticalContentAlignment" Value="Center"></Setter>
+            <Setter Property="Margin" Value="3"></Setter>
+        </Style>
+
         <Style x:Key="SwitcherButton"  TargetType="{x:Type Button}">
             <Setter Property="Width" Value="60"></Setter>
             <Setter Property="Height" Value="60"></Setter>
