--- a/Integrated Presenter/MainWindow.xaml
+++ b/Integrated Presenter/MainWindow.xaml
@@ -31,8 +31,8 @@
                     <MenuItem Header="Open" Click="OpenPresentation" IsTabStop="False"></MenuItem>
                 </MenuItem>
                 <MenuItem Header="Recording" IsTabStop="False">
-                    <MenuItem Click="ClickRecordStart" IsTabStop="False"></MenuItem> 
-                    <MenuItem Click="ClickRecordStop" IsTabStop="False"></MenuItem> 
+                    <MenuItem Click="ClickRecordStart" IsTabStop="False"></MenuItem>
+                    <MenuItem Click="ClickRecordStop" IsTabStop="False"></MenuItem>
                 </MenuItem>
                 <MenuItem Header="View" IsTabStop="False">
                     <MenuItem Header="Prev/After" IsTabStop="False" IsCheckable="True" IsChecked="True" Click="ClickViewPrevAfter"></MenuItem>
@@ -305,20 +305,83 @@
                                         <Grid Grid.Row="0">
                                             <StackPanel>
                                                 <TextBlock TextAlignment="Center" Style="{StaticResource GrayText}" Margin="5">PICTURE IN PICTURE CONTROLS</TextBlock>
-                                                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                                                    <Button Focusable="False" IsTabStop="False" Name="BtnPIPtoA" Click="ClickPIPRunToOnScreenBox" Style="{StaticResource InactivePIPControlButton}">
-                                                        <Image Source="pack://application:,,,/Icons/keyframepushleft.png"></Image>
-                                                    </Button>
-                                                    <Button Focusable="False" IsTabStop="False" Name="BtnPIPtoB" Click="ClickPIPRunToOffScreenBox" Style="{StaticResource InactivePIPControlButton}">
-                                                        <Image Source="pack://application:,,,/Icons/keyframepushright.png"></Image>
-                                                    </Button>
-                                                    <Button Focusable="False" IsTabStop="False" Width="80" Height="60" Visibility="Hidden">
+                                                <Grid>
+                                                    <Grid.ColumnDefinitions>
+                                                        <ColumnDefinition></ColumnDefinition>
+                                                        <ColumnDefinition></ColumnDefinition>
+                                                    </Grid.ColumnDefinitions>
+                                                    <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
+                                                        <Button Focusable="False" IsTabStop="False" Name="BtnPIPtoA" Click="ClickPIPRunToOnScreenBox" Style="{StaticResource InactivePIPControlButton}">
+                                                            <Image Source="pack://application:,,,/Icons/keyframepushleft.png"></Image>
+                                                        </Button>
+                                                        <Button Focusable="False" IsTabStop="False" Name="BtnPIPtoB" Click="ClickPIPRunToOffScreenBox" Style="{StaticResource InactivePIPControlButton}">
+                                                            <Image Source="pack://application:,,,/Icons/keyframepushright.png"></Image>
+                                                        </Button>
+                                                        <!--<Button Focusable="False" IsTabStop="False" Width="80" Height="60" Visibility="Hidden">
                                                         <Image Source="pack://application:,,,/Icons/keyframetobox.png"></Image>
-                                                    </Button>
-                                                    <Button Focusable="False" IsTabStop="False" Name="BtnPIPtoFull" Click="ClickPIPRunToFull" Style="{StaticResource InactivePIPControlButton}">
-                                                        <Image Source="pack://application:,,,/Icons/keyframetofill.png"></Image>
-                                                    </Button>
-                                                </StackPanel>
+                                                    </Button>-->
+                                                        <Button Margin="30,0,10,0" Focusable="False" IsTabStop="False" Name="BtnPIPtoFull" Click="ClickPIPRunToFull" Style="{StaticResource InactivePIPControlButton}">
+                                                            <Image Source="pack://application:,,,/Icons/keyframetofill.png"></Image>
+                                                        </Button>
+                                                    </StackPanel>
+                                                    <StackPanel Grid.Column="0">
+                                                        <Grid>
+                                                            <Grid.ColumnDefinitions>
+                                                                <ColumnDefinition></ColumnDefinition>
+                                                                <ColumnDefinition></ColumnDefinition>
+                                                                <ColumnDefinition></ColumnDefinition>
+                                                                <ColumnDefinition></ColumnDefinition>
+                                                            </Grid.ColumnDefinitions>
+                                                            <Grid.RowDefinitions>
+                                                                <RowDefinition></RowDefinition>
+                                                                <RowDefinition></RowDefinition>
+                                                                <RowDefinition></RowDefinition>
+                                                                <RowDefinition></RowDefinition>
+                                                            </Grid.RowDefinitions>
+                                                            <TextBlock Grid.Row="0" Grid.Column="0" Margin="5" Style="{StaticResource GrayText}">SIZE [0, 1.0]</TextBlock>
+                                                            <TextBox Style="{StaticResource darkTextbox}" AcceptsReturn="False" IsTabStop="False" Grid.Row="0" Grid.Column="1" Name="tbPIPSize"></TextBox>
+                                                            <TextBlock Grid.Row="1" Grid.Column="0" Margin="5" Style="{StaticResource GrayText}">POS X:</TextBlock>
+                                                            <TextBox AcceptsReturn="False"  IsTabStop="False"  Grid.Row="1" Grid.Column="1" Name="tbPIPPosX" Style="{StaticResource darkTextbox}"></TextBox>
+                                                            <TextBlock  Grid.Row="1" Grid.Column="2" Margin="5" Style="{StaticResource GrayText}">POS Y:</TextBlock>
+                                                            <TextBox AcceptsReturn="False" IsTabStop="False"  Grid.Row="1" Grid.Column="3" Name="tbPIPPosY" Style="{StaticResource darkTextbox}" ></TextBox>
+                                                            <TextBlock  Grid.Row="2" Grid.Column="0" Name="tbPIPmaskLR" Margin="5" Style="{StaticResource GrayText}">MASK LR:</TextBlock>
+                                                            <TextBox  AcceptsReturn="False" IsTabStop="False"  Grid.Row="2" Grid.Column="1" Style="{StaticResource darkTextbox}"></TextBox>
+                                                            <TextBlock  Grid.Row="2" Grid.Column="2" Name="tbPIPmaskTB" Margin="5" Style="{StaticResource GrayText}">MASK TB:</TextBlock>
+                                                            <TextBox AcceptsReturn="False"  IsTabStop="False"  Grid.Row="2" Grid.Column="3" Style="{StaticResource darkTextbox}"></TextBox>
+                                                            <Button Click="ClickApplyPIPSettings" IsTabStop="False" x:Name="btnApplyPIP" Grid.Row="0" Grid.Column="2" Margin="10, 0, 10, 0">
+                                                                <Button.Template>
+                                                                    <ControlTemplate>
+                                                                        <Border Name="Border" Background="#1d1d1d" BorderBrush="Orange" Margin="3" BorderThickness="1">
+                                                                            <ContentControl VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Orange">APPLY</ContentControl>
+                                                                        </Border>
+                                                                        <ControlTemplate.Triggers>
+                                                                            <Trigger Property="IsMouseOver" Value="True">
+                                                                                <Setter Property="Cursor" Value="Hand"></Setter> 
+                                                                                <Setter Property="BorderBrush" Value="Red" TargetName="Border"></Setter> 
+                                                                            </Trigger>
+                                                                        </ControlTemplate.Triggers>
+                                                                    </ControlTemplate>
+                                                                </Button.Template>
+                                                            </Button>
+<Button Click="ClickApplyKFAPIPSettings" IsTabStop="False" x:Name="btnApplyKFAPIP" Grid.Row="0" Grid.Column="3" Margin="10, 0, 10, 0">
+                                                                <Button.Template>
+                                                                    <ControlTemplate>
+                                                                        <Border Name="Border" Background="#1d1d1d" BorderBrush="Orange" Margin="3" BorderThickness="1">
+                                                                            <ContentControl VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Orange">SET A</ContentControl>
+                                                                        </Border>
+                                                                        <ControlTemplate.Triggers>
+                                                                            <Trigger Property="IsMouseOver" Value="True">
+                                                                                <Setter Property="Cursor" Value="Hand"></Setter> 
+                                                                                <Setter Property="BorderBrush" Value="Red" TargetName="Border"></Setter> 
+                                                                            </Trigger>
+                                                                        </ControlTemplate.Triggers>
+                                                                    </ControlTemplate>
+                                                                </Button.Template>
+                                                            </Button>
+
+                                                        </Grid>
+                                                    </StackPanel>
+                                                </Grid>
                                             </StackPanel>
                                         </Grid>
                                         <Grid Grid.Row="1">
