--- a/Integrated Presenter/MainWindow.xaml
+++ b/Integrated Presenter/MainWindow.xaml
@@ -174,12 +174,12 @@
                                                         <ColumnDefinition></ColumnDefinition>
                                                     </Grid.ColumnDefinitions>
                                                     <TextBlock Grid.ColumnSpan="2" TextAlignment="Center" Margin="0,5,0,0" Style="{StaticResource GrayText}">PROGRAM</TextBlock>
-                                                    <Button Name="btnProgramLock" Click="ClickBtnProgramLock" Grid.Column="1" Width="100" HorizontalAlignment="Right" Focusable="False" IsTabStop="False">
+                                                    <Button Name="btnProgramLock" Click="ClickBtnProgramLock" Grid.Column="1" Width="100" HorizontalAlignment="Right" Focusable="False" IsTabStop="False" Background="#2a2a2a" Foreground="Orange">
                                                         <Button.Content>LOCKED</Button.Content>
                                                         <Button.Template>
                                                             <ControlTemplate>
-                                                                <Border Name="Border" Background="#1d1d1d" BorderBrush="Orange" Margin="3" BorderThickness="1">
-                                                                    <ContentControl Name="btnProgramLockName" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Orange" Content="{Binding Path=Content, RelativeSource={RelativeSource AncestorType={x:Type Button}}}"></ContentControl>
+                                                                <Border Name="Border" Background="#1d1d1d" BorderBrush="{TemplateBinding Foreground}" Margin="3" BorderThickness="1">
+                                                                    <ContentControl Name="btnProgramLockName" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="{TemplateBinding Foreground}" Content="{Binding Path=Content, RelativeSource={RelativeSource AncestorType={x:Type Button}}}"></ContentControl>
                                                                 </Border>
                                                                 <ControlTemplate.Triggers>
                                                                     <Trigger Property="IsMouseOver" Value="True">
