--- a/Integrated Presenter/SlidePoolSource.xaml
+++ b/Integrated Presenter/SlidePoolSource.xaml
@@ -5,9 +5,9 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Integrated_Presenter"
              mc:Ignorable="d" 
-             d:DesignHeight="150" d:DesignWidth="300">
-    <Grid>
-        <Border Grid.Row="3" Margin="5" CornerRadius="5,5,5,5" Background="#2d2d2d" Padding="5,5,5,5">
+             d:DesignHeight="210" d:DesignWidth="350">
+    <Grid Height="210" Width="350">
+        <Border x:Name="border" Grid.Row="3" Margin="5" CornerRadius="5,5,5,5" Background="#2d2d2d" BorderBrush="Gray" BorderThickness="4" Padding="5,5,5,5">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="80"></ColumnDefinition>
@@ -16,19 +16,86 @@
                 <Grid.RowDefinitions>
                     <RowDefinition Height="30"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>
+                    <RowDefinition Height="*"></RowDefinition>
                 </Grid.RowDefinitions>
                 <Grid Grid.Column="0" Grid.ColumnSpan="2">
-                    <StackPanel Orientation="Horizontal">
-                        <RadioButton Focusable="false" IsTabStop="False" Name="rbslide" Click="ClickSlideMode" VerticalAlignment="Center" IsChecked="True" Foreground="Orange">Slide</RadioButton>
-                        <RadioButton Focusable="false" IsTabStop="False" Name="rbliturgy" Click="ClickLiturgyMode" VerticalAlignment="Center" Foreground="Orange">Liturgy</RadioButton>
-                        <RadioButton Focusable="false" IsTabStop="False" Name="rbvideo" Click="ClickVideoMode" VerticalAlignment="Center" Foreground="Orange">Video</RadioButton>
-                        <Button Focusable="false" IsTabStop="False" Click="ClickLoadMedia" Margin="10,3,0,3" Padding="5,3,3,5">Load</Button>
+                    <StackPanel Orientation="Horizontal" Focusable="False">
+                        <!--<RadioButton Style="{StaticResource ModernRadioButton}" Focusable="false" IsTabStop="False" Name="rbslide" Click="ClickSlideMode" VerticalAlignment="Center" IsChecked="True" Foreground="Orange">Still</RadioButton>-->
+                        <!--<RadioButton Focusable="false" IsTabStop="False" Name="rbliturgy" Click="ClickLiturgyMode" VerticalAlignment="Center" Foreground="Orange">Liturgy</RadioButton>-->
+                        <!--<RadioButton Focusable="false" IsTabStop="False" Name="rbvideo" Click="ClickVideoMode" VerticalAlignment="Center" Foreground="Orange">Video</RadioButton>-->
+                        <Button Focusable="False" Name="btnStill" Background="Gray" Foreground="WhiteSmoke" Click="ClickSlideMode">
+                            <Button.Template>
+                                <ControlTemplate>
+                                    <Border CornerRadius="5" Padding="5,0,5,0" Name="Border" Background="#1d1d1d" BorderBrush="{TemplateBinding Property=Background}" Margin="3" BorderThickness="1">
+                                        <ContentControl VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="{TemplateBinding Property=Foreground}">STILL</ContentControl>
+                                    </Border>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="Cursor" Value="Hand"></Setter>
+                                            <Setter Property="BorderBrush" Value="Red" TargetName="Border"></Setter>
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Button.Template>
+                        </Button>
+                        <Button Focusable="False" Name="btnLiturgy" Background="Gray" Foreground="WhiteSmoke" Click="ClickLiturgyMode">
+                            <Button.Template>
+                                <ControlTemplate>
+                                    <Border CornerRadius="5" Padding="5,0,5,0" Name="Border" Background="#1d1d1d" BorderBrush="{TemplateBinding Property=Background}" Margin="3" BorderThickness="1">
+                                        <ContentControl VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="{TemplateBinding Property=Foreground}">LITURGY</ContentControl>
+                                    </Border>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="Cursor" Value="Hand"></Setter>
+                                            <Setter Property="BorderBrush" Value="Red" TargetName="Border"></Setter>
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Button.Template>
+                        </Button>
+                        <Button Focusable="False" Name="btnVideo" Background="Gray" Foreground="WhiteSmoke" Click="ClickVideoMode">
+                            <Button.Template>
+                                <ControlTemplate>
+                                    <Border CornerRadius="5" Padding="5,0,5,0" Name="Border" Background="#1d1d1d" BorderBrush="{TemplateBinding Property=Background}" Margin="3" BorderThickness="1">
+                                        <ContentControl VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="{TemplateBinding Property=Foreground}">VIDEO</ContentControl>
+                                    </Border>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="Cursor" Value="Hand"></Setter>
+                                            <Setter Property="BorderBrush" Value="Red" TargetName="Border"></Setter>
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Button.Template>
+                        </Button>
+
+
+                        <Button Focusable="false" IsTabStop="False" Click="ClickLoadMedia" Margin="10, 0, 0, 0">
+                            <Button.Template>
+                                <ControlTemplate>
+                                    <Border Name="Border" Padding="5,0,5,0" Background="#1d1d1d" BorderBrush="Orange" Margin="3" BorderThickness="1">
+                                        <ContentControl VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="Orange">LOAD</ContentControl>
+                                    </Border>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="Cursor" Value="Hand"></Setter>
+                                            <Setter Property="BorderBrush" Value="Red" TargetName="Border"></Setter>
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Button.Template>
+
+                        </Button>
                     </StackPanel>
                 </Grid>
-                <Grid Grid.Row="1" Grid.Column="1">
-                    <local:MediaPlayer2 x:Name="mediapreview"></local:MediaPlayer2>
+                <Grid Grid.Row="1" Grid.Column="1" Grid.RowSpan="2">
+                    <local:MediaPlayer2 x:Name="mediapreview" Panel.ZIndex="100"></local:MediaPlayer2>
+                    <Rectangle Fill="Black" Panel.ZIndex="1"></Rectangle>
                 </Grid>
-                <Button Focusable="false" IsTabStop="False" Name="BtnTake" Click="ClickTake" Grid.Column="0" Grid.Row="1" Style="{StaticResource SwitcherButton_Disabled}">Take</Button>
+                <StackPanel Grid.Row="1" Grid.RowSpan="2">
+                    <Button Focusable="false" IsTabStop="False" Name="BtnTakeInsert" Click="ClickTakeInsert" Grid.Column="0" Grid.Row="1" Style="{StaticResource SwitcherButton_Disabled}">TAKE INS</Button>
+                    <Button Focusable="false" IsTabStop="False" Name="BtnTakeReplace" Click="ClickTakeReplace" Grid.Column="0" Grid.Row="1" Style="{StaticResource SwitcherButton_Disabled}">TAKE REP</Button>
+                </StackPanel>
             </Grid>
         </Border>
     </Grid>
